# c-lang-examples

./: .gitignore  CMakeLists.txt  README.md
include/: matrix.h  vector.h
src/: matrix.c  test.c  vector.c
src/linalg/: CMakeLists.txt  main.c  matrix.c  matrix.h  vector.c  vector.h
